--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "pug": "2.0.4"
+    "pug": "^2.0.4"
+  },
+  "engines": {
+    "node": "~10"
   }
 }
